<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="@color/black_2"
        app:cardCornerRadius="35dp"
        app:cardElevation="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="25dp"
                android:fontFamily="@font/sf_ui_display_black"
                android:gravity="center"
                android:shadowRadius="50"
                android:text="@string/menu_title"
                android:textColor="@color/white"
                android:textSize="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/sf_ui_display_medium"
                android:gravity="center"
                android:text="@string/menu_text"
                android:textColor="@color/black_text"
                android:textSize="22dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_multi"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="@color/black_bouton"
                app:cardCornerRadius="20dp"
                app:cardElevation="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_solo"
                app:layout_constraintTop_toBottomOf="@+id/content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="1dp"
                    android:fontFamily="@font/sf_ui_display_bold"
                    android:text="@string/menu_enligne"
                    android:textColor="@color/white"
                    android:textSize="22dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_solo"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="7dp"
                app:cardBackgroundColor="@color/black_bouton"
                app:cardCornerRadius="20dp"
                app:cardElevation="40dp"
                app:layout_constraintBottom_toBottomOf="@+id/btn_multi"
                app:layout_constraintEnd_toStartOf="@+id/btn_multi"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_multi">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="1dp"
                    android:fontFamily="@font/sf_ui_display_bold"
                    android:text="@string/menu_local"
                    android:textColor="@color/white"
                    android:textSize="22dp" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>