<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="@color/black_2"
        app:cardCornerRadius="35dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="25dp"
                android:fontFamily="@font/sf_ui_display_black"
                android:gravity="center"
                android:text="@string/code_title"
                android:textColor="@color/white"
                android:textSize="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/sf_ui_display_medium"
                android:gravity="center"
                android:text="@string/code_content"
                android:textColor="@color/black_text"
                android:textSize="22dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_ok"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="@color/black_bouton"
                app:cardCornerRadius="20dp"
                app:cardElevation="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/code1">

                <ProgressBar
                    android:id="@+id/pb_btn"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:visibility="gone"
                    android:indeterminateTint="@color/white"/>

                <TextView
                    android:id="@+id/txt_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="1dp"
                    android:fontFamily="@font/sf_ui_display_bold"
                    android:text="@string/code_enter"
                    android:textColor="@color/white"
                    android:textSize="22sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/code4"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="20dp"
                app:cardBackgroundColor="@color/black_bouton"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/code3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/code3"
                app:layout_constraintTop_toTopOf="@+id/code1">

                <EditText
                    android:id="@+id/et4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/black_bouton"
                    android:fontFamily="@font/sf_ui_display_heavy"
                    android:hint="@string/code_hint"
                    android:inputType="numberDecimal|number"
                    android:maxLength="2"
                    android:textColor="@color/white"
                    android:textColorHint="@color/black_text"
                    android:textSize="30dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/code3"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:cardBackgroundColor="@color/black_bouton"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/code2"
                app:layout_constraintEnd_toStartOf="@+id/code4"
                app:layout_constraintStart_toEndOf="@+id/code2"
                app:layout_constraintTop_toTopOf="@+id/code1">

                <EditText
                    android:id="@+id/et3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/black_bouton"
                    android:fontFamily="@font/sf_ui_display_heavy"
                    android:hint="@string/code_hint"
                    android:maxLength="2"
                    android:inputType="numberDecimal|number"
                    android:textColor="@color/white"
                    android:textColorHint="@color/black_text"
                    android:textSize="30dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/code2"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:cardBackgroundColor="@color/black_bouton"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/code1"
                app:layout_constraintEnd_toStartOf="@+id/code3"
                app:layout_constraintStart_toEndOf="@+id/code1"
                app:layout_constraintTop_toTopOf="@+id/code1">

                <EditText
                    android:id="@+id/et2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/black_bouton"
                    android:fontFamily="@font/sf_ui_display_heavy"
                    android:hint="@string/code_hint"
                    android:maxLength="2"
                    android:inputType="numberDecimal|number"
                    android:textColor="@color/white"
                    android:textColorHint="@color/black_text"
                    android:textSize="30dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/code1"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                app:cardBackgroundColor="@color/black_bouton"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toStartOf="@+id/code2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/content">

                <EditText
                    android:id="@+id/et1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/black_bouton"
                    android:fontFamily="@font/sf_ui_display_heavy"
                    android:hint="@string/code_hint"
                    android:inputType="numberDecimal|number"
                    android:maxLength="2"
                    android:textColor="@color/white"
                    android:textColorHint="@color/black_text"
                    android:textSize="30dp" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>